removing article width fixes overflow problems

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -101,7 +101,6 @@ input.steps__hidden {
 
 article {
   height: $section-height;
-  width: 730px;
 }
 
 @for $i from 1 through 7 {
